--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,7 @@ html
             li.active
               a(href="/") Home
             li
-              a(href="/history") History
+              a(href="/history") Track History
             li
               a(href="/djs") DJs
 
