Add DJ pages, track history, track pages.

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,11 +11,5 @@ block content
     h2 Track History
     ol
       - for song in history
-        li
-          a(href="/history/#{song.id}") #{song.timestamp}
-          |  
-          a(href="/songs/#{song._song.id}") #{song._song.title}
-          - if (typeof(song._dj) != 'undefined')
-            |  was played by 
-            a(href="/djs/#{song._dj.plugID}") #{song._dj.name}
+        include blocks/song-instance
   
