--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,3 +30,14 @@ html
 
     script(src="http://code.jquery.com/jquery-1.8.3.min.js")
     script(src="/js/bootstrap.js")
+
+    script
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-36741605-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
