--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,7 +30,7 @@ html
     script(src="http://code.jquery.com/jquery-1.8.3.min.js")
     script(src="/js/bootstrap.js")
 
-    - if (typeof(config.ga.config) != 'undefined' && config.ga.config.length > 0)
+    - if (typeof(config.ga.account) != 'undefined' && config.ga.account.length > 0)
       script
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', #{config.ga.account}]);
