Add top Tracks using mapreduce

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,11 @@ html
       body {
         padding-top: 60px;
       }
+      .stage {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+      }
   body
     .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
@@ -23,6 +28,8 @@ html
               a(href="/history") Track History
             li
               a(href="/djs") DJs
+            li
+              a(href="/songs") Songs
 
     .container
       block content
