--- a/views/index.jade
+++ b/views/index.jade
@@ -7,9 +7,16 @@ block content
     a(href="/songs/#{currentSong.id}") #{currentSong.title}
     | &rdquo; by #{currentSong.author}
 
-  #history
-    h2 Track History
-    ol
-      - for song in history
-        include blocks/song-instance
+  .row-fluid
+    .stage.span10
+      - for dj in room.djs
+        .djCard.span2
+          a(href="/djs/#{dj.plugID}") #{dj.name}
   
+  .row-fluid
+    #history
+      h2 Track History
+      ol
+        - for song in history
+          include blocks/song-instance
+    
