--- a/views/index.jade
+++ b/views/index.jade
@@ -2,12 +2,13 @@
 extends layout
 
 block content
-  h1 Coding Soundtrack
+  h1 <a href="http://plug.dj">&#9835;</a> Coding Soundtrack
   h2 Currently playing &ldquo;
     a(href="/songs/#{currentSong.id}") #{currentSong.title}
     | &rdquo; by #{currentSong.author}
 
   .row-fluid
+    h3 Currently on stage:
     .stage.span10
       - for dj in room.djs
         .djCard.span2
