--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,6 +34,9 @@ html
     .container
       block content
 
+      footer
+        small &copy; someone
+
     script(src="http://code.jquery.com/jquery-1.8.3.min.js")
     script(src="/js/bootstrap.js")
 
