--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@
 html
   head
     meta(charset="utf-8")
-    title Jade Example
+    title Coding Soundtrack
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
     link(rel="stylesheet", href="/css/bootstrap.css")
