--- a/views/blocks/dj.jade
+++ b/views/blocks/dj.jade
@@ -1,4 +1,7 @@
 h3
+  - if (typeof(dj.avatar) != 'undefined' && typeof(dj.avatar.thumb) != 'undefined')
+    img(src="#{dj.avatar.thumb}")
+    |  
   - if (typeof(dj.plugID) != 'undefined')
     a(href="/djs/#{dj.plugID}") #{dj.name}
   - else
