--- a/views/dj.jade
+++ b/views/dj.jade
@@ -1,14 +1,32 @@
 extends layout
 
 block content
-  h1 #{dj.name} 
-    small <strong>#{dj.karma}</strong> karma
-  .bio
-    != md(dj.bio, true)
+  .row
+    div.plug-sprite.pull-right(style="background: url('#{avatar}');")
+    - if (typeof(dj.avatar) != 'undefined' && typeof(dj.avatar.thumb) != 'undefined')
+      img.pull-left(src="#{dj.avatar.thumb}", style="margin-right: 1em;")
 
-  h3 Play History
-  - for song in dj.playHistory
-    li
-      a(href="/history/#{song.id}") #{song.timestamp}
-      |  
-      a(href="/songs/#{song._song.id}") #{song._song.title}
+    h1 #{dj.name} 
+      small <strong>#{dj.points.total}</strong> points
+        |  <strong>#{dj.karma}</strong> karma
+
+    - if (typeof(dj.points) != 'undefined')
+      h2
+        small
+          - if (typeof(dj.points.dj) != 'undefined')
+            |  <strong>#{dj.points.dj}</strong> DJ points
+          - if (typeof(dj.points.curator) != 'undefined')
+            |  <strong>#{dj.points.curator}</strong> curator points
+          - if (typeof(dj.points.listener) != 'undefined')
+            |  <strong>#{dj.points.listener}</strong> listener points
+
+    .bio
+      != md(dj.bio, true)
+
+  .row
+    h3 Play History
+    - for song in dj.playHistory
+      li
+        a(href="/history/#{song.id}") #{song.timestamp}
+        |  
+        a(href="/songs/#{song._song.id}") #{song._song.title}
