--- a/views/index.jade
+++ b/views/index.jade
@@ -2,17 +2,21 @@
 extends layout
 
 block content
-  h1 <a href="http://plug.dj/coding-soundtrack">&#9835;</a> Coding Soundtrack
+  h1 <a href="http://plug.dj/coding-soundtrack">&#9835;</a> Coding Soundtrack 
+    a.btn.btn-primary.btn-large(href="http://plug.dj/coding-soundtrack") &#9835; Listen Now &raquo;
   h2 Currently playing &ldquo;
     a(href="/songs/#{currentSong.id}") #{currentSong.title}
     | &rdquo; by #{currentSong.author}
 
   .row-fluid
     h3 Currently on stage:
-    .stage.span10
+    .stage
       - for dj in room.djs
-        .djCard.span2
-          a(href="/djs/#{dj.plugID}") #{dj.name}
+        a(href="/djs/#{dj.plugID}")
+          - if (typeof(dj.avatar) != 'undefined' && typeof(dj.avatar.thumb) != 'undefined')
+            img(src="#{dj.avatar.thumb}")
+            |  
+          span #{dj.name}
 
   .row-fluid
     #history
