--- a/views/layout.jade
+++ b/views/layout.jade
@@ -67,7 +67,11 @@ html
           a(href="http://www.ericmartindale.com/") Eric Martindale
           | , with credit to 
           a(href="http://plug.dj") plug.dj
-          |  for providing the platform.
+          |  for providing the platform and 
+          a(href="https://github.com/chrisinajar") chrisinajar
+          |  for creating 
+          a(href="https://github.com/chrisinajar/plugapi") plugapi
+          | .
 
 
     script(src="//code.jquery.com/jquery-1.8.3.min.js")
