--- a/views/chats.jade
+++ b/views/chats.jade
@@ -1,15 +1,20 @@
 extends layout
 
 block content
-  h1 Chat History
-  - for chat in chats
-    p.chat-message
-      strong
-        a(href="/djs/#{chat._person.plugID}")
-          - if (typeof(chat._person.avatar) != 'undefined' && typeof(chat._person.avatar.thumb) != 'undefined')
-            img(src="#{chat._person.avatar.thumb}", style="height: 1.2em; border: 1px solid black;")
-            |  
-          | #{chat._person.name}
-        | : 
-      | #{chat.message}
-      small.pull-right #{chat.timestamp}
+  header.jumbotron.subhead
+    .container
+      h1 Chat
+      p.lead
+        | Everything that has been spoken.
+  br
+  .container
+    - for chat in chats
+      .media
+        a.pull-left(href="/djs/#{chat._person.plugID}")
+          - if(typeof(chat._person.avatar) != 'undefined' && typeof(chat._person.avatar.thumb) != 'undefined')
+              img.media-object(src="#{chat._person.avatar.thumb}", height="16", width="16")
+        .media-body
+          strong
+            a(href="/djs/#{chat._person.plugID}") #{chat._person.name}
+          | : #{chat.message}
+          small.pull-right.muted #{chat.timestamp}
