--- a/views/song.jade
+++ b/views/song.jade
@@ -1,33 +1,56 @@
 extends layout
 
 block content
-  include blocks/song
+  header.jumbotron.subhead
+    .container
+      h1 #{song._song.title}
+      p.lead
+        | #{song._song.author}
+  br
+  .container
+    .row
+      .span8
+        .page-header
+          h1 Listen
+        case song.format
+          when '1'
+            iframe(width="100%", height="480", src="http://www.youtube.com/embed/#{song.cid}", frameborder="0", allowfullscreen)
+          when '2'
+            iframe(width="100%", height="166", scrolling="no", frameborder="no", src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F#{song.cid}&show_artwork=true")
+      .span4
+        .page-header
+          h1 Info
 
-  - if (typeof(song.mostRecently._dj) != 'undefined' && typeof(song.mostRecently._dj.name) != 'undefined')
-    p Last played on 
-      a(href="/history/#{song.mostRecently._id}") #{song.mostRecently.timestamp}
-      |  by 
-      a(href="/djs/#{song.mostRecently._dj.plugID}") #{song.mostRecently._dj.name}
-      | .
+        p Played <strong>#{song.playCount}</strong> times by <strong>#{songDJs.length}</strong> different DJs: 
+        ul
+        - for dj in songDJs
+          li
+            a(href="/djs/#{dj.plugID}") #{dj.name}
+            |  (<strong>#{dj.songPlays}</strong> plays)
+          br
 
-  - if (typeof(song.firstPlay._dj) != 'undefined' && typeof(song.firstPlay._dj.name) != 'undefined')
-    p First played on 
-      a(href="/history/#{song.firstPlay._id}") #{song.firstPlay.timestamp}
-      |  by 
-      a(href="/djs/#{song.firstPlay._dj.plugID}") #{song.firstPlay._dj.name}
-      | .
-
-  - else
-    p Last played on #{song.mostRecently.timestamp}.
-
-  p This song has been played <strong>#{song.playCount}</strong> times by <strong>#{songDJs.length}</strong> different DJs: 
-    - for dj in songDJs
-      a(href="/djs/#{dj.plugID}") #{dj.name}
-      |  (<strong>#{dj.songPlays}</strong> plays),  
-
-
-  case song.format
-    when '1'
-      iframe(width="560", height="315", src="http://www.youtube.com/embed/#{song.cid}", frameborder="0", allowfullscreen)
-    when '2'
-      iframe(width="100%", height="166", scrolling="no", frameborder="no", src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F#{song.cid}&show_artwork=true")
+        - if (typeof(song.mostRecently._dj) != 'undefined' && typeof(song.mostRecently._dj.name) != 'undefined')
+          strong Last played:
+          br
+          a(href="/history/#{song.mostRecently._id}") #{song.mostRecently.timestamp}
+          br
+          |  by 
+          a(href="/djs/#{song.mostRecently._dj.plugID}") 
+            strong #{song.mostRecently._dj.name}
+          | 
+          br
+          br
+        - if (typeof(song.firstPlay._dj) != 'undefined' && typeof(song.firstPlay._dj.name) != 'undefined')
+          strong First played:
+          br 
+          a(href="/history/#{song.firstPlay._id}") #{song.firstPlay.timestamp}
+          br
+          |  by 
+          a(href="/djs/#{song.firstPlay._dj.plugID}") 
+            strong #{song.firstPlay._dj.name}
+        - else
+          strong Last played:
+          br
+          | #{song.mostRecently.timestamp}
+        br
+        br
