--- a/views/blocks/song.jade
+++ b/views/blocks/song.jade
@@ -1,5 +1,5 @@
 h3 
-  a(href="/songs/#{song._song.id}") #{song._song.title}
+  a(href="/songs/#{song._song.id}") #{song._song.author} &mdash; #{song._song.title}
   - if (typeof(song.timestamp) != 'undefined')
     small 
       a(href="/history/#{song._id}") #{song.timestamp}
