--- a/views/dj.jade
+++ b/views/dj.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  .row
-    div.plug-sprite.pull-right(style="background: url('#{avatar}');")
+  .row-fluid
+    div.plug-sprite.pull-right(style="background: url('#{avatarImage}');")
     - if (typeof(dj.avatar) != 'undefined' && typeof(dj.avatar.thumb) != 'undefined')
       img.pull-left(src="#{dj.avatar.thumb}", style="margin-right: 1em;")
 
@@ -23,7 +23,7 @@ block content
     .bio
       != md(dj.bio, true)
 
-  .row
+  .row-fluid
     h3 Play History
     - for song in dj.playHistory
       li
