Subtitles! They work!

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,7 @@ block content
     .container
       h1 Coding Soundtrack
       p
-        | Subtitle will go here. Somehow.
-        span.muted  - Maxorq
+        | #{subtitle}
       p
         a.btn.btn-danger.btn-large(href="http://plug.dj/coding-soundtrack") Join us on plug.dj!
       | Now playing: 
