Adding missing templates, bugfix !songArtist

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -71,6 +71,9 @@ html
               a(href="/song-selection") Song Selection Guide
               |  &bull; 
               a(href="/rules") Rules
+              |  &bull; 
+              a(href="https://plus.google.com/103972776808088576698", rel="publisher") Google+
+
 
             p <a href="http://github.com/martindale/snarl">snarl</a> has been listening since #{oldestPlay.timestamp}.
             p
