--- a/views/dj.jade
+++ b/views/dj.jade
@@ -30,6 +30,7 @@ block content
     h3 Play History
     - for song in dj.playHistory
       li
-        a(href="/history/#{song.id}") #{song.timestamp}
+        a(href="/history/#{song.id}")
+          abbr.timeago(title="#{song.isoDate}") #{song.timestamp}
         |  
         a(href="/songs/#{song._song.id}") #{song._song.title}
