--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,12 +3,22 @@ html
   head
     meta(charset="utf-8")
     title Coding Soundtrack
+
+    meta(itemprop="name", content="Coding Soundtrack: Music for Programmers")
+    meta(itemprop="description", content="Coding Soundtrack is fresh musical entertainment for those with robot ears. We play non-distracting music for coding sessions, and provide a creative community of Programmers, Developers, Administrators, Engineers, Hackers, and a Troll. They come for the Music, they stay for the Lolz.")
+    meta(itemprop="image", content="/img/mixer.jpg")
+
+
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
     link(rel="stylesheet", href="/css/bootstrap.css")
     style
       body {
         padding-top: 60px;
+      }
+      #wide {
+        background-repeat: no-repeat;
+        background-position: center;
       }
       .stage {
         text-align: center;
@@ -54,15 +64,23 @@ html
               a(href="/songs") Songs
             li
               a(href="/chat") Chat
-              
+
+    if wideformat
+      #wide
+        .container
+          block content
+    else 
+      .container
+        block content
 
     .container
-      block content
-
       footer
         hr
         .row
           .span6
+
+            .g-plus.pull-right(data-height="69", data-href="//plus.google.com/103972776808088576698", data-rel="publisher")
+
             h5
               a(href="/about") About
               |  &bull; 
@@ -86,13 +104,16 @@ html
               |  for creating 
               a(href="https://github.com/chrisinajar/plugapi") plugapi
               | .
+
           .span6
+
             h4 About Us
             p Coding Soundtrack is fresh musical entertainment for those with robot ears. We are a community based around <a href="http://plug.dj/coding-soundtrack">a plug.dj room</a> where we play non-distracting music for coding sessions, and provide a creative community of Programmers, Developers, Administrators, Engineers, Hackers, and a Troll. They come for the Music, they stay for the Lolz.
 
 
     script(src="//code.jquery.com/jquery-1.8.3.min.js")
     script(src="/js/bootstrap.js")
+    script(src="/js/jquery.timeago.js")
 
     script
       $('.plug-sprite').each(function() {
@@ -101,6 +122,8 @@ html
           $(self).css('background-position-x', (parseInt($(self).css('background-position-x')) - 150) + 'px');
         }, 83);
       });
+
+      $('.timeago').timeago();
 
     block scripts
 
@@ -114,4 +137,10 @@ html
           var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
           ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+        (function() {
+          var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+          po.src = 'https://apis.google.com/js/plusone.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
         })();
