--- a/views/songlist.jade
+++ b/views/songlist.jade
@@ -5,6 +5,9 @@ block content
   form(method="post", action='/songs').form-search.form-inline.pull-right
     input(type="text", name="q", placeholder="search...").search-query
 
-  h1 Track History
-  - for song in history
-    include blocks/song
+  h1 Songs
+
+  ul
+    - for song in songs
+      li
+        a(href="/songs/#{song.id}") #{song.author} &mdash; #{song.title}
