Changed "Track History"

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,10 @@ html
     meta(itemprop="image", content="/img/mixer.jpg")
 
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-
+    style
+      .subhead {
+        margin-top: 40px;
+      }
     link(rel="stylesheet", href="/css/bootstrap.css")
     style
       #wide {
