--- a/views/history.jade
+++ b/views/history.jade
@@ -2,9 +2,16 @@ extends layout
 
 block content
 
-  form(method="post", action='/songs').form-search.form-inline.pull-right
-    input(type="text", name="q", placeholder="search...").search-query
+  
 
-  h1 Track History
-  - for song in history
-    include blocks/song
+  header.jumbotron.subhead
+    .container
+      form(method="post", action='/songs').form-search.form-inline.pull-right
+        input(type="text", name="q", placeholder="search...").search-query
+      h1 History
+      p.lead
+        | Songs we played lately.
+  br
+  .container
+    - for song in history
+      include blocks/song
