--- a/views/boycey.jade
+++ b/views/boycey.jade
@@ -1,10 +1,14 @@
 extends layout
 
 block content
-
-  h1 BOYCEY
-  h2 Our Illustrious Leader and Ruthless Destroyer of Insectoids
-
-  p Our tribute to you.
-
-  img(src="http://i.imgur.com/QkiZxEC.gif", style="max-width: 100%;")
+  header.jumbotron.subhead
+    .container
+      h1 Boycey
+      p.lead
+        | Our Illustrious Leader and Ruthless Destroyer of Insectoids
+  .container
+    .row
+      .span12
+        h1 Our tribute to you.
+  
+        img(src="http://i.imgur.com/QkiZxEC.gif", style="max-width: 100%;")
