--- a/views/about.jade
+++ b/views/about.jade
@@ -1,6 +1,14 @@
 extends layout
 
 block content
-
-  h1 About Us
-  p Coding Soundtrack is fresh musical entertainment for those with Robot Ears. We are a community based around a Turntable.fm room where we play Non-Distracting music for coding sessions, and provide a creative community of Programmers, Developers, Administrators, Engineers, Hackers and a Troll. They come for the Music, they stay for the Lolz.
+  header.jumbotron.subhead
+    .container
+      h1 About Us
+      p.lead
+        | Why are we here?
+  br
+  .container
+    .row
+      .span12
+        p
+          | Coding Soundtrack is fresh musical entertainment for those with Robot Ears. We are a community based around a Turntable.fm room where we play Non-Distracting music for coding sessions, and provide a creative community of Programmers, Developers, Administrators, Engineers, Hackers and a Troll. They come for the Music, they stay for the Lolz.
