--- a/views/rules.jade
+++ b/views/rules.jade
@@ -1,15 +1,20 @@
 extends layout
 
 block content
-  h1 Coding Soundtrack's Rules
-  ol
-    li NO AUTO DJ SCRIPT ALLOWED! DAS BOOT!
-    li No bitching about peoples song selection (If you don’t like it, click lame)
-    li No unfunny Trolls (If you’re going to troll, do it right!)
-    li Don’t go AFK while djing. After ten minutes automatic DAS BOOT!
-    li Autobop Strongly ENCOURAGED, required if you are a DJ.
-    li Play music that is not distracting for those knee deep in programming.
-    li Don’t spam the chat with links to other rooms and/or your stupid facebook (if you’re caught, DAS BOOT!)
-    li Don’t take anything we say too seriously.
-    li ??????????
-    li Profit
+  header.jumbotron.subhead
+    .container
+      h1 Rules
+      p.lead
+        | The ten commandments.
+  br
+  .container 
+    h4 1. NO AUTO DJ SCRIPT ALLOWED! DAS BOOT!
+    h4 2. No bitching about peoples song selection (If you don’t like it, click lame)
+    h4 3. No unfunny Trolls (If you’re going to troll, do it right!)
+    h4 4. Don’t go AFK while djing. After ten minutes automatic DAS BOOT!
+    h4 5. Autobop Strongly ENCOURAGED, required if you are a DJ.
+    h4 6. Play music that is not distracting for those knee deep in programming.
+    h4 7. Don’t spam the chat with links to other rooms and/or your stupid facebook (if you’re caught, DAS BOOT!)
+    h4 8. Don’t take anything we say too seriously.
+    h4 9. ??????????
+    h4 10. Profit
