--- a/views/layout.jade
+++ b/views/layout.jade
@@ -57,11 +57,13 @@ html
             li.active
               a(href="/") Home
             li
-              a(href="/history") Track History
+              a(href="/rules") Rules
+            li
+              a(href="/songs") Songs
             li
               a(href="/djs") DJs
             li
-              a(href="/songs") Songs
+              a(href="/history") History
             li
               a(href="/chat") Chat
 
