--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
     .container
       h1 Coding Soundtrack
       p
-        | One stop shop for all your Smiff needs.
+        | #{subtitle}
       p
         a.btn.btn-danger.btn-large(href="http://plug.dj/coding-soundtrack") Join us on plug.dj!
       | Now playing: 
