--- a/views/history.jade
+++ b/views/history.jade
@@ -7,7 +7,7 @@ block content
         input(type="text", name="q", placeholder="search...").search-query
       h1 History
       p.lead
-        | Songs we played lately.
+        | Songs we've played recently.
   br
   .container
     - for song in history
