--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
       p
         | One stop shop for all your Smiff needs.
       p
-        a.btn.btn-danger.btn-large(href="http://plug.dj/coding-soundtrack") Join us on plug.dj!
+        a.btn.btn-danger.btn-large(href="http://plug.dj/coding-soundtrack") &#9835; Listen Now &raquo;
       | Now playing: 
       a(href="/songs/#{currentSong.id}")
         strong #{currentSong.author}
