--- a/views/songs.jade
+++ b/views/songs.jade
@@ -7,7 +7,7 @@ block content
         input(type="text", name="q", placeholder="search...").search-query
       h1 Songs
       p.lead
-        | Everything that have been played.
+        | Everything that have been played.  Ever.
   br
   .container
     .row
