--- a/views/song.jade
+++ b/views/song.jade
@@ -32,7 +32,8 @@ block content
         - if (typeof(song.mostRecently._dj) != 'undefined' && typeof(song.mostRecently._dj.name) != 'undefined')
           strong Last played:
           br
-          a(href="/history/#{song.mostRecently._id}") #{song.mostRecently.timestamp}
+          a(href="/history/#{song.mostRecently._id}")
+            abbr(title="#{song.mostRecently.isoDate}").timeago
           br
           |  by 
           a(href="/djs/#{song.mostRecently._dj.plugID}") 
@@ -43,7 +44,8 @@ block content
         - if (typeof(song.firstPlay._dj) != 'undefined' && typeof(song.firstPlay._dj.name) != 'undefined')
           strong First played:
           br 
-          a(href="/history/#{song.firstPlay._id}") #{song.firstPlay.timestamp}
+          a(href="/history/#{song.firstPlay._id}")
+            abbr(title="#{song.firstPlay.isoDate}").timeago
           br
           |  by 
           a(href="/djs/#{song.firstPlay._dj.plugID}") 
@@ -51,6 +53,7 @@ block content
         - else
           strong Last played:
           br
-          | #{song.mostRecently.timestamp}
+          a(href="/history/#{song.id}")
+            abbr(title="#{song.firstPlay.isoDate}").timeago
         br
         br
