--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ block content
     .row
       .span4
         .page-header
-          h1 Queue
+          h1 Current DJs
         - for dj in room.djs
           .media
             a.pull-left(href="/djs/#{dj.plugID}")
